dist_man1_MANS=

if BUILD_HIPHOPCOIND
  dist_man1_MANS+=hiphopcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=hiphopcoin-qt.1
endif

if BUILD_HIPHOPCOIN_CLI
  dist_man1_MANS+=hiphopcoin-cli.1
endif

if BUILD_HIPHOPCOIN_TX
  dist_man1_MANS+=hiphopcoin-tx.1
endif

if ENABLE_WALLET
if BUILD_HIPHOPCOIN_WALLET
  dist_man1_MANS+=hiphopcoin-wallet.1
endif
endif
